@@ -159,7 +159,7 @@ def logfwd_edit(request, fw_type, object_id=None, api=False):
                     ) & (
                         Q(log_forwarders=log_om.id) | Q(log_forwarders_parse_failure=log_om.id)
                     )).distinct()
-                for frontend  in frontends:
+                for frontend in frontends:
                     # If the name of the log forwarder is changed, update it in the log_condition of the frontend
                     if log_om_old_name:
                         frontend.log_condition = frontend.log_condition.replace(f"{{{{{log_om_old_name}}}}}", f"{{{{{log_om.name}}}}}")
